chore: 更新 .gitignore 文件
- 添加多个新文件到 .gitignore 列表中，以忽略不必要的文件和文档

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+AUTO_REMOVE_NOTIFICATION_FIX.md
+CONNECTION_PERSISTENCE_FEATURE.md
+DUPLICATE_NOTIFICATION_FIX.md
+DOWNLOAD_COMPLETE_OPEN_FOLDER_FEATURE.md
+DOWNLOAD_FIX.md
+DOWNLOAD_PROGRESS_FIX.md
+DUPLICATE_NOTIFICATION_FIX.md
+EMPTY_DIRECTORY_DIAGNOSIS.md
+NOTIFICATION_OPTIMIZATION.md
+NOTIFICATION_TIMING_UPDATE.md
+OPEN_FILE_FOLDER_FIX.md
+TRANSFER_POPUP_FILENAME_LAYOUT_FIX.md
+TRANSFER_POPUP_AND_CANCEL_FIX.md
+WINDOWS_SFTP_FIX.md
+
