添加GitHub Actions自动构建配置
- 创建完整的CI/CD工作流
  - ci.yml: 持续集成，代码检查和构建测试
  - build.yml: 自动构建和发布 (标签触发)
  - manual-build.yml: 手动构建工作流
  - release.yml: 正式发布工作流

- 支持多平台自动构建
  - Windows: .msi/.exe 安装包
  - macOS: .dmg 磁盘映像 (Universal Binary)
  - Linux: .AppImage/.deb 安装包

- 工作流特性
  - 跨平台构建矩阵 (Windows/macOS/Linux)
  - 自动依赖安装和缓存
  - 代码质量检查 (TypeScript/Rust)
  - 构建产物自动上传
  - GitHub Release自动创建

- 构建优化
  - Rust编译缓存加速
  - pnpm包管理器
  - 条件化依赖安装
  - 并行构建支持

- 开发工具
  - 本地构建测试脚本 (Bash/PowerShell)
  - GitHub Actions配置验证脚本
  - 详细的使用文档和说明

- package.json脚本增强
  - 添加tauri:build、tauri:dev命令
  - 添加lint、type-check脚本
  - 支持调试构建模式

- 发布流程
  - 语义化版本控制支持
  - 自动生成发布说明
  - 多语言安装指南
  - 用户友好的下载说明

现在可以通过以下方式触发构建:
1. 推送标签: git tag v1.0.0 && git push origin --tags
2. 手动触发: GitHub Actions  Manual Build
3. 开发测试: 推送到main分支

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ OPEN_FILE_FOLDER_FIX.md
 TRANSFER_POPUP_FILENAME_LAYOUT_FIX.md
 TRANSFER_POPUP_AND_CANCEL_FIX.md
 WINDOWS_SFTP_FIX.md
-
+MULTIPLE_TRANSFER_POPUP_FIX.md
+DIRECTORY_ISSUE_FIX.md  
