添加GitHub Actions使用文档和快速开始指南
- 创建快速开始指南 (QUICK_START_GUIDE.md)
  - 三种构建触发方式的详细说明
  - 构建产物格式和平台支持
  - 本地开发和测试指南
  - 常见问题解答

- 创建完整配置总结 (GITHUB_ACTIONS_SUMMARY.md)
  - 详细的配置完成状态
  - 支持平台和构建流程说明
  - 技术特性和优化措施
  - 预期构建时间和产物大小
  - 下一步操作建议

- 文档特色
  - 中文界面友好的说明
  - 清晰的步骤指导
  - 实用的代码示例
  - 完整的故障排除指南

现在用户可以:
1. 快速了解如何使用GitHub Actions
2. 一键触发多平台构建
3. 获得专业的安装包产物
4. 享受完全自动化的发布流程

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ TRANSFER_POPUP_AND_CANCEL_FIX.md
 WINDOWS_SFTP_FIX.md
 MULTIPLE_TRANSFER_POPUP_FIX.md
 DIRECTORY_ISSUE_FIX.md  
+GITHUB_ACTIONS_README.md
