--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ WINDOWS_SFTP_FIX.md
 MULTIPLE_TRANSFER_POPUP_FIX.md
 DIRECTORY_ISSUE_FIX.md  
 GITHUB_ACTIONS_README.md
+GITHUB_ACTIONS_SUMMARY.md
+QUICK_START_GUIDE.md
